--- a/src/app/components/navegacao/navegacao.component.html
+++ b/src/app/components/navegacao/navegacao.component.html
@@ -3,6 +3,6 @@
     <a class="navbar-brand" href="#"><h3><img class="largura-1" src="logopng.png" alt="">Apoio a Doação</h3></a>
     <div>
       <a routerLink="/profiledoador"><img class="mar-r-l largura-1 border-hover radius-pattern" src="user.png" alt=""></a>
-      <button class="btn btn-pattern my-2 my-sm-0" (click)="logout()">Logout</button>
+      <button class="btn btn-outline-primary my-2 my-sm-0" (click)="logout()">Logout</button>
     </div>
 </nav>
