--- a/src/app/components/navinstituicao/navinstituicao.component.html
+++ b/src/app/components/navinstituicao/navinstituicao.component.html
@@ -30,7 +30,7 @@
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
       </form> -->
       <a routerLink="/profileinstituicao"><img class="mar-r-l largura-1 border-hover radius-pattern" src="user.png" alt=""></a>
-      <button class="btn btn-pattern my-2 my-sm-0" (click)="logout()">Logout</button>
+      <button class="btn btn-outline-primary my-2 my-sm-0" (click)="logout()">Logout</button>
     </div>
 </nav>
 <script src="../../../assets/script.js"></script>
