--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,26 +1,28 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 <body>
     <app-header></app-header>
     <main class="c-main">
         <section>
-            <div *ngIf="error" class="error">
+            <div *ngIf="error" class="alert alert-danger" role="alert">
                 {{ error }}
             </div>
             <div class="d-f"><img class="seta mar-r-l" src="seta-esquerda.png" alt=""><h2>Login</h2></div>
             <form #loginForm="ngForm" (ngSubmit)="submitData(loginForm)">
            
                 <label for="username">Nome de usuário</label>
-                <input class="caixa-texto-p mar-baixo-1" type="username" id="username" name="username" placeholder="Digite seu nome de usuário" required ngModel>
+                <input class="caixa-texto-p mar-baixo-1 rounded" type="username" id="username" name="username" placeholder="Digite seu nome de usuário" required ngModel>
 
                 <label for="password">Senha</label>
-                <input class="caixa-texto-p mar-baixo-1" type="password" id="password" name="password" placeholder="Digite sua senha" required ngModel>
+                <input class="caixa-texto-p mar-baixo-1 rounded" type="password" id="password" name="password" placeholder="Digite sua senha" required ngModel>
             
     
-                <button class="btn-pattern mar-cima-1" type="submit">Entrar</button>
+                <p class="text-center"><button class="btn btn-outline-primary mar-cima-1" type="submit">Entrar</button></p>
 
             </form>
-            <a href="#" class="have-account">Criar conta</a><br>
+            <p class="text-center m-0"><a href="#" >Criar conta</a></p>
 
-            <a href="#" class="forgot-password">Esqueci a senha</a>
+            <p class="text-center m-0"><a href="#" >Esqueci a senha</a></p>
         </section>
     </main>
     <app-footer></app-footer>
