--- a/src/app/components/registrardoacao/registrardoacao.component.html
+++ b/src/app/components/registrardoacao/registrardoacao.component.html
@@ -2,10 +2,10 @@
     <app-navinstituicao></app-navinstituicao>
     <main class="c-main">
         <section class="main-section">
-            <div *ngIf="error" class="error">
+            <div *ngIf="error" class="alert alert-warning" role="alert">
                 {{ error }}
             </div>
-            <div *ngIf="success" class="success">
+            <div *ngIf="success" class="alert alert-success" role="alert">
                 {{ success }}
             </div>
             <div class="v-center d-f "><img class="seta mar-r-l" src="seta-esquerda.png" alt="" (click)="goBack()"><h2>Registrar doação</h2></div>
@@ -18,7 +18,7 @@
                 <label for="user">Nome de usuário</label>
                 <input class="caixa-texto-p mar-baixo-1" type="text" id="user" name="user" placeholder="Nome de usuário do doador" ngModel>
 
-                <button class="btn-pattern mar-cima-1 d-b mar-auto" type="button" (click)="createDonation(signupForm)">Registrar</button>
+                <button class="btn btn-outline-secondary mar-cima-1 d-b mar-auto" type="button" (click)="createDonation(signupForm)">Registrar</button>
             </form>
         </section>
     </main>
