--- a/src/assets/colors.css
+++ b/src/assets/colors.css
@@ -7,7 +7,7 @@
     --orange: #f1ac16;
     --yellow: #e2df0e;
     --gray1: #e6e6e6;
-    --gray2: #b9b9b9;
+    --gray2: #c7c7c7;
     --gray3: #a0a0a0;
     --gray4: #7a7a7a;
 
