--- a/src/app/components/homedoador/homedoador.component.html
+++ b/src/app/components/homedoador/homedoador.component.html
@@ -4,6 +4,7 @@
       <section class="w-c">
         <h4 class="t-center">Itens de doação mais requisitados pelas instituições:</h4>
         <app-word-cloud></app-word-cloud>
+        <p class="text-center m-0 link-destaque"><a routerLink="/resgatardoacao" >Resgatar doação</a></p>
       </section>
       <section>
         <h4 class="t-center">Procure instituições pelo nome:</h4>
