--- a/src/assets/colors.css
+++ b/src/assets/colors.css
@@ -6,6 +6,7 @@
     --orangelight: #f5c255;
     --orange: #f1ac16;
     --yellow: #e2df0e;
+    --yellowlight: #fffeac;
     --gray1: #e6e6e6;
     --gray2: #c7c7c7;
     --gray3: #a0a0a0;
