botoes, modal, icones

--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -4,9 +4,9 @@
       <img [src]="images[currentIndex]" alt="carousel">
     </div>
     <div class="carousel-text">
-      <h2>Bem vindo!</h2>
+      <h2>Bem-vindo!</h2>
       <h6>Aqui doadores podem encontrar onde doar mais facilmente!</h6>
-      <h6>E instituições de caridade podem se cadastrar no nosso site para ter mais alcances!</h6>
+      <h6>E instituições de caridade podem se cadastrar no nosso site para ter mais alcance!</h6>
     </div>
     <!-- Controles manuais -->
     <div class="carousel-controls">
