--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,7 @@
 <!-- rodapé básico -->
-<footer style="background-color: #333; color: white; text-align: center; padding: 20px;">
-    <p>&copy; 2024 <a style="color: white;" href="https://github.com/Codigo-Novo" target="_blank">Código Novo</a>. Todos os direitos reservados.</p>
+<footer>
+    <p>&copy; 2024 <a href="https://github.com/Codigo-Novo" target="_blank">Código Novo</a>. UTFPR-CM. Todos os direitos reservados.</p>
+    <a href=" mailto: codigonovo2024@gmail.com" target="_blank"><img class="rounded" src="gmail.png" alt=""></a>
+    <a href="https://github.com/Codigo-Novo" target="_blank"><img class="rounded" src="github.png" alt=""></a>
 </footer>
   
