--- a/src/assets/colors.css
+++ b/src/assets/colors.css
@@ -5,6 +5,7 @@
     --bluedark: #0c098a;
     --orangelight: #f5c255;
     --orange: #f1ac16;
+    --orangedark: #dd9700;
     --yellow: #e2df0e;
     --yellowlight: #fffeac;
     --gray1: #e6e6e6;
