--- a/src/app/components/navegacao/navegacao.component.html
+++ b/src/app/components/navegacao/navegacao.component.html
@@ -3,6 +3,13 @@
     <a class="navbar-brand" href="#"><h3><img class="largura-1" src="logopng.png" alt="">Apoio a Doação</h3></a>
     <div>
       <a routerLink="/profiledoador"><img class="mar-r-l largura-1 border-hover radius-pattern" src="user.png" alt=""></a>
-      <button class="btn btn-outline-primary my-2 my-sm-0" (click)="logout()">Logout</button>
+      <button (click)="openModal()" class="btn btn-outline-primary my-2 my-sm-0">Sair</button>
+
+      <app-modal [showModal]="showModal" (closeModal)="closeModal()">
+        <h2>Confirmação!</h2>
+        <p>Tem certeza que deseja sair do site?</p>
+        <button (click)="closeModal()" class="btn btn-outline-secondary mb-2 ">Voltar</button>
+        <button (click)="closeModal(); logout()" class="btn btn-outline-primary mb-2 ">Sair</button>
+      </app-modal>
     </div>
 </nav>
