--- a/src/app/components/registrardoacao/registrardoacao.component.html
+++ b/src/app/components/registrardoacao/registrardoacao.component.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 <body>
     <app-navinstituicao></app-navinstituicao>
     <main class="c-main">
@@ -13,12 +15,12 @@
             <form #signupForm="ngForm">
 
                 <label for="description">Descrição</label>
-                <textarea class="caixa-texto-p mar-baixo-1" id="description" name="description" placeholder="Descreva a doação. Exemplo: itens presentes, quantidade, etc" ngModel required rows=6 cols=55></textarea>
+                <textarea class="caixa-texto-p mar-baixo-1 rounded" id="description" name="description" placeholder="Descreva a doação. Exemplo: itens presentes, quantidade, etc" ngModel required rows=6 cols=55></textarea>
 
                 <label for="user">Nome de usuário</label>
-                <input class="caixa-texto-p mar-baixo-1" type="text" id="user" name="user" placeholder="Nome de usuário do doador" ngModel>
+                <input class="caixa-texto-p mar-baixo-1 rounded" type="text" id="user" name="user" placeholder="Nome de usuário do doador" ngModel>
 
-                <button class="btn btn-outline-secondary mar-cima-1 d-b mar-auto" type="button" (click)="createDonation(signupForm)">Registrar</button>
+                <p class="text-center"><button class="btn btn-outline-secondary mar-cima-1 d-b mar-auto" type="button" (click)="createDonation(signupForm)">Registrar</button></p>
             </form>
         </section>
     </main>
