botoes, modal, icones

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,6 +1,10 @@
 a{
     color: white;
 }
+a:hover{
+    color: white;
+    font-weight: bolder;
+}
 footer{
     background-color: var(--gray4); 
     color: white; 
