--- a/src/styles.css
+++ b/src/styles.css
@@ -67,14 +67,17 @@ body{
 .links-inicio{
     width: 100%;
     margin: 0.2rem;
-    background-color: var(--gray1);
+    background: linear-gradient(to top, #eeeeee, var(--gray1), var(--gray2));
     border: outset var(--orangelight) 0.1rem;
     border-radius: 0.25rem;
+    transition: 0.25s;
 }
 .links-inicio:hover{
-    background-color: var(--gray2);
+    background: linear-gradient(to bottom, #eeeeee, var(--gray1), var(--gray2));
     border: inset var(--gray4) 0.1rem;
     color: var(--orangedark);
+    transition: 0.25s;
+
 }
 .links-inicio:focus, .links-inicio.focus {
     background-color: var(--gray3);
