General fixes, modal implement

--- a/src/app/components/apoioadoacao/apoioadoacao.component.html
+++ b/src/app/components/apoioadoacao/apoioadoacao.component.html
@@ -9,8 +9,8 @@
             <app-carousel></app-carousel>
          
             <a routerLink="/homedoador" ><button class="links-inicio mar-cima-1 alinhar-centro fonte-media">Explorar instituições</button></a><br>
-            <a routerLink="/login" ><button class="links-inicio mar-cima-1 alinhar-centro fonte-media">Login</button></a><br>
-            <a routerLink="/signup" ><button class="links-inicio mar-cima-1 alinhar-centro fonte-media">Cadastrar</button></a><br>
+            <a routerLink="/login" ><button class="links-inicio mar-cima-1 alinhar-centro fonte-media">Entrar</button></a><br>
+            <a routerLink="/signup" ><button class="links-inicio mar-cima-1 alinhar-centro fonte-media">Cadastre-se</button></a><br>
          
 
         </section>
