--- a/src/app/components/navinstituicao/navinstituicao.component.html
+++ b/src/app/components/navinstituicao/navinstituicao.component.html
@@ -2,7 +2,9 @@
 <nav class="navbar d-f navbar-light bg-light">
     <a class="navbar-brand" href="#"><h3><img class="largura-1" src="logopng.png" alt="">Apoio a Doação</h3></a>
   
-    <div class="" id="conteudoNavbarSuportado">
+    <div id="conteudoNavbarSuportado">
+      <ul class="navbar-nav mr-auto">
+      </ul>
       <a routerLink="/profileinstituicao"><img class="mar-r-l largura-1 border-hover radius-pattern" src="user.png" alt=""></a>
 
       <button (click)="openModal()" class="btn btn-outline-primary my-2 my-sm-0">Sair</button>
