--- a/src/app/components/sobresite/sobresite.component.html
+++ b/src/app/components/sobresite/sobresite.component.html
@@ -6,12 +6,14 @@
     <main class="c-main mar-cima-2">
         <section class="main-section">
             <ul class="">
-                <h4 class="t-center">Apoio a Doação:</h4> 
-                <li class="mar-cima-2"><p>Função: ajuda doadores a encontrar instituições de caridade</p></li>
+                <div class="d-f"><img class="seta mar-r-l" src="seta-esquerda.png" alt="" (click)="goBack()"><h2>Sobre o site</h2></div>
+                <h2 class="t-center">Apoio a Doação</h2> 
+                <li class="mar-cima-2"><p>Função: ajudar doadores a encontrar instituições de caridade</p></li>
                 <li><p>Criado em 2024</p></li>
-                <li><p>Local: Universidade Tecnológica Federal do Paraná, campus Campo Mourão(UTFPR-CM)</p></li>
+                <li><p>Local: Universidade Tecnológica Federal do Paraná, campus Campo Mourão (UTFPR-CM)</p></li>
                 <li><p>Equipe fundadora: Código Novo</p></li>
-                <li><p>Integrantes: <a href="https://github.com/D4rkS1de-0x7f">Gabriel Rodrigo</a>, <a href="https://github.com/MatheusOliveiraT">Matheus de Oliveira</a> e <a href="https://github.com/taisbarbosa">Taís Barbosa</a></p></li>
+                <li><p>Integrantes: <a href="https://github.com/MatheusOliveiraT">Matheus de Oliveira</a> e <a href="https://github.com/taisbarbosa">Taís Barbosa</a></p></li>
+                <li><p>Ex-integrantes: <a href="https://github.com/D4rkS1de-0x7f">Gabriel Rodrigo</a></li>
                 <li><p>Github <a href="https://github.com/Codigo-Novo"><b>aqui</b></a></p></li>
             </ul>
         </section>
