--- a/src/app/components/paginainstituicao/paginainstituicao.component.html
+++ b/src/app/components/paginainstituicao/paginainstituicao.component.html
@@ -18,7 +18,7 @@
               </ng-template>
             </div>
             <div *ngIf="!found">
-              <p>Instituição náo existe.</p> 
+              <div class="d-f"><img class="seta mar-r-l" src="seta-esquerda.png" alt="" (click)="goBack()"><h2>Instituição não encontrada.</h2></div>
             </div>
           </section>
     </main>
